Сделал переходы на уже готовые страницы из header Почти сделал страницу с вторым этапом 01.11

--- a/index.html
+++ b/index.html
@@ -2,19 +2,18 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-<!--    <meta name="viewport" content="width=1080, initial-scale=0">-->
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
     <title>Змейка удачи 2025</title>
     <link rel="stylesheet" href="./static/css/mainPageStyle/mainStyle.css">
 </head>
 <body>
-    <div class="main">
+    <div class="main-page-wrapper">
         <header class="wrapper__header header">
             <div class="header-container">
                 <div class="header-inner">
                     <div class="header-inner__logo logo">
-                        <img class="logo__image" src="static/images/anixLogo.png" alt="Лого Аникс" />
+                        <a href="index.html"><img class="logo__image" src="static/images/anixLogo.png" alt="Лого Аникс" /></a>
                     </div>
                     <nav class="header-inner__navigation navigation" >
                         <ul class="navigation-menu">
@@ -22,7 +21,7 @@
                                 Условия
                             </li>
                             <li class="navigation-menu__item">
-                                Подарки
+                                <a href="pages/prizesPage.html">Подарки</a>
                             </li>
                             <li class="navigation-menu__item">
                                 Поставщики
