--- a/pages/prizesPage.html
+++ b/pages/prizesPage.html
@@ -5,15 +5,15 @@
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
   <title>Змейка удачи 2025</title>
-  <link rel="stylesheet" href="../static/css/conditionsPageStyle/conditionsMainStyle.css">
+  <link rel="stylesheet" href="../static/css/prizesPageStyle/prizesMainStyle.css">
 </head>
 <body>
-    <div class="main-conditions-wrapper">
+    <div class="main-prizes-wrapper">
         <header class="wrapper__header header">
             <div class="header-container">
                 <div class="header-inner">
                     <div class="header-inner__logo logo">
-                        <img class="logo__image" src="../static/images/anixLogo.png" alt="Лого Аникс" />
+                        <a href="../index.html"><img class="logo__image" src="../static/images/anixLogo.png" alt="Лого Аникс" /></a>
                     </div>
                     <nav class="header-inner__navigation navigation" >
                         <ul class="navigation-menu">
@@ -21,7 +21,7 @@
                                 Условия
                             </li>
                             <li class="navigation-menu__item">
-                                Подарки
+                                <a href="prizesPage.html">Подарки</a>
                             </li>
                             <li class="navigation-menu__item">
                                 Поставщики
@@ -34,11 +34,11 @@
         <div class="guide-container">
             <span class="guide-heading">КАК УЧАСТВОВАТЬ В РОЗЫГРЫШЕ</span>
             <div class="guide-steps-container">
-                <img class="guide-steps-icon" src="../static/images/conditionsPageImages/stepOneIcon.png" />
-                <img class="guide-arrow-icon" src="../static/images/conditionsPageImages/arrowStepIcon.png" />
-                <img class="guide-steps-icon" src="../static/images/conditionsPageImages/stepTwoIcon.png" />
-                <img class="guide-arrow-icon" src="../static/images/conditionsPageImages/arrowStepIcon.png" />
-                <img class="guide-steps-icon" src="../static/images/conditionsPageImages/stepThreeIcon.png" />
+                <img class="guide-steps-icon" src="../static/images/prizesPageImages/stepOneIcon.png" />
+                <img class="guide-arrow-icon" src="../static/images/prizesPageImages/arrowStepIcon.png" />
+                <img class="guide-steps-icon" src="../static/images/prizesPageImages/stepTwoIcon.png" />
+                <img class="guide-arrow-icon" src="../static/images/prizesPageImages/arrowStepIcon.png" />
+                <img class="guide-steps-icon" src="../static/images/prizesPageImages/stepThreeIcon.png" />
             </div>
             <div class="guide-text-container">
                 <span class="guide-text">
@@ -61,7 +61,7 @@
         <div class="main-prizes-container">
             <div class="main-prizes-heading-container">
                 <div class="main-prizes-snake">
-                    <img class="main-prizes-snake-icon" src="../static/images/conditionsPageImages/snakeMiniIcon.png">
+                    <img class="main-prizes-snake-icon" src="../static/images/prizesPageImages/snakeMiniIcon.png">
                 </div>
                 <div class="main-prizes-text-container">
                     <span class="main-prizes-heading">ГЛАВНЫЕ ПРИЗЫ</span>
@@ -70,15 +70,15 @@
             </div>
             <div class="main-prizes-icon-container">
                 <div class="icon-wrapper">
-                    <img class="main-prizes-tvIcon" src="../static/images/conditionsPageImages/tvIcon.png" />
+                    <img class="main-prizes-tvIcon" src="../static/images/prizesPageImages/tvIcon.png" />
                     <span class="main-prizes-icon-text">LED-телевизор диагональ 65 дюймов</span>
                 </div>
                 <div class="icon-wrapper">
-                    <img class="main-prizes-playIcon" src="../static/images/conditionsPageImages/playstationIcon.png" />
+                    <img class="main-prizes-playIcon" src="../static/images/prizesPageImages/playstationIcon.png" />
                     <span class="main-prizes-icon-text">Игровая консоль PlayStation 5 Slim</span>
                 </div>
                 <div class="icon-wrapper">
-                    <img class="main-prizes-holodilnikIcon" src="../static/images/conditionsPageImages/holodilnikIcon.png" />
+                    <img class="main-prizes-holodilnikIcon" src="../static/images/prizesPageImages/holodilnikIcon.png" />
                     <span class="main-prizes-icon-text">Холодильник  LG с морозильником</span>
                 </div>
             </div>
@@ -90,28 +90,28 @@
                     <span class="week-prizes-text">Регистрируй больше чеков и получите больше шансов на победу каждую неделю!</span>
                 </div>
                 <div class="week-prizes-snake">
-                    <img class="week-prizes-snake-icon" src="../static/images/conditionsPageImages/snakeMiniRotate.png">
+                    <img class="week-prizes-snake-icon" src="../static/images/prizesPageImages/snakeMiniRotate.png">
                 </div>
             </div>
             <div class="week-prizes-icon-container">
                 <div class="week-grill-prize-container week-icon-container">
-                    <img class="week-grill-prize-icon week-icon" src="../static/images/conditionsPageImages/grillIcon.png" alt="" />
+                    <img class="week-grill-prize-icon week-icon" src="../static/images/prizesPageImages/grillIcon.png" alt="" />
                     <span class="week-prize-text">LED-телевизор диагональ 65 дюймов</span>
                 </div>
                 <div class="week-aerogrill-prize-container week-icon-container">
-                    <img class="week-aerogrill-prize-icon week-icon" src="../static/images/conditionsPageImages/aerogrillIcon.png" alt="" />
+                    <img class="week-aerogrill-prize-icon week-icon" src="../static/images/prizesPageImages/aerogrillIcon.png" alt="" />
                     <span class="week-prize-text">LED-телевизор диагональ 65 дюймов</span>
                 </div>
                 <div class="week-yandex-prize-container week-icon-container">
-                    <img class="week-yandex-prize-icon week-icon" src="../static/images/conditionsPageImages/yandexStationIcon.png" alt="" />
+                    <img class="week-yandex-prize-icon week-icon" src="../static/images/prizesPageImages/yandexStationIcon.png" alt="" />
                     <span class="week-prize-text">LED-телевизор диагональ 65 дюймов</span>
                 </div>
                 <div class="week-robot-prize-container week-icon-container">
-                    <img class="week-robot-prize-icon week-icon" src="../static/images/conditionsPageImages/robotIcon.png" alt="" />
+                    <img class="week-robot-prize-icon week-icon" src="../static/images/prizesPageImages/robotIcon.png" alt="" />
                     <span class="week-prize-text">LED-телевизор диагональ 65 дюймов</span>
                 </div>
                 <div class="week-biggrill-prize-container week-icon-container">
-                    <img class="week-biggrill-prize-icon week-icon" src="../static/images/conditionsPageImages/bigGrillIcon.png" alt="" />
+                    <img class="week-biggrill-prize-icon week-icon" src="../static/images/prizesPageImages/bigGrillIcon.png" alt="" />
                     <span class="week-prize-text">LED-телевизор диагональ 65 дюймов</span>
                 </div>
             </div>
@@ -125,7 +125,7 @@
                 <div class="store-elipse-header"></div>
             </div>
             <div class="prizes-per-store-footer">
-                <img class="stich-image" src="../static/images/conditionsPageImages/stichImage.png" alt="" />
+                <img class="stich-image" src="../static/images/prizesPageImages/stichImage.png" alt="" />
                 <div class="store-elipse-footer"></div>
             </div>
         </div>
@@ -138,7 +138,7 @@
                 <div class="finalists-elipse-header"></div>
             </div>
             <div class="first-finalists-footer">
-                <img class="shoper-image" src="../static/images/conditionsPageImages/shoperImage.png" alt="" />
+                <img class="shoper-image" src="../static/images/prizesPageImages/shoperImage.png" alt="" />
                 <div class="finalists-elipse-footer"></div>
             </div>
         </div>
