Готовый вариант второй этапа с адаптивом Добавил блок с кнопками авторизации
01.11

--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
                         <div class="complete-progress-bar"></div>
                     </div>
                 </div>
+                <div class="profile-authorization profile">
+                    <div class="profile-registration">
+                        <button class="profile-registration__button">Регистрация</button>
+                    </div>
+                    <div class="profile-entrance">
+                        <button class="profile-entrance__button">Вход</button>
+                    </div>
+                </div>
                 <div class="draw-date-container">
                     <div class="draw-date">
                         <div class="draw-date-checkbox">
