--- a/pages/gameStageTwo.html
+++ b/pages/gameStageTwo.html
@@ -74,6 +74,14 @@
                         <div class="complete-progress-bar"></div>
                     </div>
                 </div>
+                <div class="profile-authorization profile">
+                    <div class="profile-registration">
+                        <button class="profile-registration__button">Регистрация</button>
+                    </div>
+                    <div class="profile-entrance">
+                        <button class="profile-entrance__button">Вход</button>
+                    </div>
+                </div>
                 <div class="draw-date-container">
                     <div class="draw-date">
                         <div class="draw-date-checkbox">
@@ -98,27 +106,30 @@
         </div>
         <div class="main-game">
             <img class="main-game-snake" src="../static/images/stageTwoImages/snakeStageTwoImage.png" />
-            <!--                <div class="main-game-step-stage-two" id="step_41">1</div>-->
-            <!--                <div class="main-game-step-stage-two" id="step_42">2</div>-->
-            <!--                <div class="main-game-step-stage-two" id="step_43">3</div>-->
-            <!--                <div class="main-game-step-stage-two" id="step_44">4</div>-->
-            <!--                <div class="main-game-step-stage-two" id="step_45">5</div>-->
-            <!--                <div class="main-game-step-stage-two" id="step_46">6</div>-->
-            <!--                <div class="main-game-step-stage-two" id="step_47">7</div>-->
-            <!--                <div class="main-game-step-stage-two" id="step_48">8</div>-->
-            <!--                <div class="main-game-step-stage-two" id="step_49">9</div>-->
-            <!--                <div class="main-game-step-stage-two" id="step_50">10</div>-->
-            <!--                <div class="main-game-step-stage-two" id="step_51">11</div>-->
-            <!--                <div class="main-game-step-stage-two" id="step_52">12</div>-->
-            <!--                <div class="main-game-step-stage-two" id="step_53">13</div>-->
-            <!--                <div class="main-game-step-stage-two" id="step_54">14</div>-->
-            <!--                <div class="main-game-step-stage-two" id="step_55">15</div>-->
-            <!--                <div class="main-game-step-stage-two" id="step_56">16</div>-->
-            <!--                <div class="main-game-step-stage-two" id="step_57">17</div>-->
-            <!--                <div class="main-game-step-stage-two" id="step_58">18</div>-->
-            <!--                <div class="main-game-step-stage-two" id="step_59">19</div>-->
-            <!--                <div class="main-game-step-stage-two" id="step_60">20</div>-->
+            <div class="main-game-step-stage-two" id="step_41">1</div>
+            <div class="main-game-step-stage-two" id="step_42">2</div>
+            <div class="main-game-step-stage-two" id="step_43">3</div>
+            <div class="main-game-step-stage-two" id="step_44">4</div>
+            <div class="main-game-step-stage-two" id="step_45">5</div>
+            <div class="main-game-step-stage-two" id="step_46">6</div>
+            <div class="main-game-step-stage-two" id="step_47">7</div>
+            <div class="main-game-step-stage-two" id="step_48">8</div>
+            <div class="main-game-step-stage-two" id="step_49">9</div>
+            <div class="main-game-step-stage-two" id="step_50">10</div>
+            <div class="main-game-step-stage-two" id="step_51">11</div>
+            <div class="main-game-step-stage-two" id="step_52">12</div>
+            <div class="main-game-step-stage-two" id="step_53">13</div>
+            <div class="main-game-step-stage-two" id="step_54">14</div>
+            <div class="main-game-step-stage-two" id="step_55">15</div>
+            <div class="main-game-step-stage-two" id="step_56">16</div>
+            <div class="main-game-step-stage-two" id="step_57">17</div>
+            <div class="main-game-step-stage-two" id="step_58">18</div>
+            <div class="main-game-step-stage-two" id="step_59">19</div>
+            <div class="main-game-step-stage-two" id="step_60">20</div>
         </div>
     </div>
+    <footer class="footer" id="footer">
+        <img class="footer-elka-stage-two" src="../static/images/elkaIcon.png" />
+    </footer>
 </body>
 </html>
