--- a/pages/gameStageTwo.html
+++ b/pages/gameStageTwo.html
@@ -128,8 +128,12 @@
             <div class="main-game-step-stage-two" id="step_60">20</div>
         </div>
     </div>
+    <div class="sound-switch">
+        <img class="sound-switch-icon" id="soundSwitch" src="../static/images/soundOnIcon.png"/>
+    </div>
     <footer class="footer" id="footer">
         <img class="footer-elka-stage-two" src="../static/images/elkaIcon.png" />
     </footer>
 </body>
+<script src="../static/js/soundSwitch.js"></script>
 </html>
