--- a/pages/prizesPage.html
+++ b/pages/prizesPage.html
@@ -147,8 +147,12 @@
             <span class="prizes-from-suppliers-text">Покупайте товары наших партнеров, оставляйте отзывы и выигрывайте больше призов!</span>
         </div>
     </div>
+    <div class="sound-switch">
+        <img class="sound-switch-icon" id="soundSwitch" src="../static/images/soundOnIcon.png"/>
+    </div>
     <footer class="footer">
         <img class="footer-elka" src="../static/images/elkaImage.png" />
     </footer>
 </body>
+<script src="../static/js/soundSwitch.js"></script>
 </html>
